[package]
name = "wx-injector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
injectors = { path = "D:\\repos\\injectors" }
sysinfo = "0.30.5"
windows = { version = "0.52.0", features = ["Win32_Foundation"] }
wx-payload = { path = "../wx-payload", artifact = "cdylib" }
