[package]
name = "wx-payload"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
injectors = { version = "0.1.6" }
log = "0.4.20"
sysinfo = "0.30.5"
windows = { version = "0.52.0", features = ["Win32_Foundation"] }
simplelog = "0.12.1"
widestring = "1.0.2"
actix-web = "4"
tokio = { version = "1", features = ["macros"] }
